Criado classe async e extendendos asynctask, e implementando os metodos necessarios. Criado também o evento onclick download na mainactivity

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,7 +10,8 @@
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/download"/>
+        android:text="@string/download"
+        android:onClick="download"/>
 
     <ImageView
         android:layout_width="match_parent"
